# pudding

./: .gitignore  .install.json  .readthedocs.yaml  .travis.yml  README.md  pud  pud.py  pyproject.toml  setup.py
.github/workflows/: coveralls.yml  publish.yml  python-app.yml
docs/: api.md  conf.py  customizing.md  gelatin.md  index.md  quick_start.md  requirements.txt  syntax.md
pudding/: __init__.py  __main__.py  _cli.py  util.py  version.py
pudding/compiler/: __init__.py  compiler.py  datatypes.py  functions.py  statements.py  token.py  util.py
pudding/compiler/tokens/: __init__.py  functions.py  statements.py  token.py
pudding/datatypes/: __init__.py  data.py  or_.py  regex.py  string.py  util.py  varname.py
pudding/processor/: __init__.py  context.py  grammar.py  processor.py  triggers.py
pudding/reader/: __init__.py  reader.py
pudding/tokens/: __init__.py  datatypes.py  token.py  util.py
pudding/tokens/functions/: __init__.py  function.py  grammar_call.py  say.py
pudding/tokens/functions/do/: __init__.py  do.py  fail.py  next.py  return_.py  say.py
pudding/tokens/statements/: __init__.py  define.py  fail.py  grammar.py  import_.py  match.py  next.py  return_.py  skip.py  statement.py  when.py
pudding/writer/: __init__.py  json.py  node.py  util.py  writer.py  xml.py  yaml.py
pudding/writer/writers/: __init__.py  json.py  writer.py  xml.py  yaml.py
tests/: __init__.py  test_cli.py  test_errors.py  test_util.py
tests/data/: expected.json  expected.slixml  expected.xml  expected.yaml  import_me.pud  input.txt  input.xml  me2.pud  slixml.pud  test.pud
