[build-system]
requires = ["setuptools >= 77.0.3", "wheel", "lxml"]
build-backend = "setuptools.build_meta"

[project]
name = "pudding"
dynamic = ["version"]
description = "Pudding converts text to a structured format, such as XML, JSON or YAML."
authors = [
    {name = "Moritz Hille", email = "moritz.hekxsler@gmail.com"},
]
dependencies = [
    "argparse",
    "lxml",
    "pyyaml",
]
requires-python = ">=3.12"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["parser", "converter", "text", "xml", "yaml", "json"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: File Formats",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]

[project.scripts]
pud = "pud:main"

[project.urls]
Homepage = "https://github.com/Hekxsler/pudding"
Issues = "https://github.com/Hekxsler/pudding/issues"

[tool.setuptools.dynamic]
version = {attr = "pudding.__version__"}



[tool.pdm.dev-dependencies]
format = [
    "black>=23.7.0",
    "isort>=5.0.0",
]
lint = [
    "flake8>=4.0.1",
    "flake8-docstrings>=1.6.0",
    "Flake8-pyproject>=1.2.3",
    "mypy>=1.4.1",
    "types-requests>=2.31.0",
]
refactor = [
    "rope>=1.2.0",
]
test = [
    "pytest>=7.1.2",
    "pytest-env>=0.8.2",
    "testfixtures>=7.1.0",
]
tool = [
    "tox>=4.6.4",
    "tox-pdm>=0.6.1",
    "pre-commit>=3.3.3",
]

[tool.pdm.scripts]
# Better use these unspecific commands, especially in pipelines!
format = "black {args} ."
isort = "isort --skip-gitignore {args} ."
lint = "flake8 {args}"
test = "pytest {args}"
typing = "mypy {args} ."
all = {composite = ["isort", "format", "typing", "lint", "test"]}
# Specific commands for convinience.
black = "black {args} ."
flake8 = "flake8 {args}"
pytest = "pytest {args}"
mypy = "mypy {args} ."

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = [
    # See https://github.com/PyCQA/pycodestyle/issues/373
    "E203",
]
extend-exclude = [
    ".git",
    ".gitignore",
    ".pytest_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
docstring-convention = "google"
max-line-length = 88
count = true

[tool.mypy]
disallow_untyped_decorators = "true"
ignore_missing_imports = "true"
strict = "true"
